// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings should show Heading 1 1`] = `
<h1
  className="Component-base-0-1-1 Component-h1-0-1-2 undefined"
>
  TEST
</h1>
`;

exports[`Headings should show Heading 2 1`] = `
<h1
  className="Component-base-0-1-5 Component-h2-0-1-7 undefined"
>
  TEST
</h1>
`;
